# zip-eq

./: Cargo.toml  README.md
benches/: lib.rs
src/: eager.rs  lazy.rs  lib.rs
