[package]
name = "zip_eq"
version = "0.1.0"
edition = "2021"
authors = ["sarah <>"]
description = "Zip iterator that check that its inputs have the same length."
readme = "README.md"
repository = "https://github.com/kitegi/zip-eq/"
license = "MIT"
keywords = ["zip", "iterator"]

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
lipsum = "0.8.0"

[[bench]]
name = "lib"
harness = false
